# quad_auto

./: .gitattributes  .gitmodules  README.md  cyclonedds.xml  justfile  pixi.toml
common/legged_common/: CMakeLists.txt  package.xml
common/legged_common/test/: ho_qp_test.cpp
common/legged_teleop/: package.xml  setup.cfg  setup.py
common/legged_teleop/legged_twist_publisher/: legged_twist_publisher_member_function.py
common/legged_thirdparties/qpOASES/: CMakeLists.txt  package.xml
common/legged_utils/: CMakeLists.txt  package.xml
common/unitree_ros/unitree_joint_controller/: CMakeLists.txt  package.xml  unitree_joint_plugin.xml
common/unitree_ros/unitree_joint_controller/src/: unitree_joint_controller.cpp  unitree_joint_controller_parameters.yaml
common/unitree_ros/unitree_joint_controller/test/: test_load_unitree_joint_controller.cpp
dependencies/depth_img_normal_estimation/: CMakeLists.txt  README.md  package.xml
dependencies/depth_img_normal_estimation/cfg/: hardware.yaml  sim.yaml
dependencies/depth_img_normal_estimation/include/depth_img_normal_estimation/: NormalEstimator.h  PinholeCamera.h
dependencies/depth_img_normal_estimation/launch/: normal_estimation_sim.launch.py
dependencies/depth_img_normal_estimation/src/: NormalEstimationNode.cpp  NormalEstimator.cpp
dependencies/egocylindrical/: .gitignore  CMakeLists.txt  README.md  egocylindrical_libraries.txt  installation.txt  nodelet_plugins.xml  package.xml  setup.py
dependencies/egocylindrical/cfg/: Filter.cfg  FloorImageGenerator.cfg  Propagator.cfg  RangeImageGenerator.cfg  RangeImageInflatorGenerator.cfg  egocylindrical_propagator.yaml
dependencies/egocylindrical/data/: custom_rosconsole.conf
dependencies/egocylindrical/include/egocylindrical/: add_points.h  can_image_core.h  can_image_core_inl.h  can_image_inflator_generator.h  clock_reset_monitor.h  coordinate_frame_helper.h  dedicated_egocylindrical.h  depth_image_common.h  depth_image_difference.h  depth_image_difference_debugging_publisher.h  depth_image_inserter.h  depth_image_remapper.h  depth_image_sensor.h  ecwrapper.h  ecwrapper_buffer.h  egocylindrical.h  floor_image_core.h  floor_image_core_inl.h  floor_image_generator.h  laser_scan_inserter.h  laser_scan_sensor.h  non_message_sequencer_filter.h  normal_point_cloud_floor_only_generator.h  normal_point_cloud_generator.h  parameter_getter.hpp  point_cloud_core.h  point_cloud_generator.h  point_propagator.h  point_transformer.h  point_transformer_object.h  projected_point_cloud_generator.h  range_image_common.h  (+15 more)
dependencies/egocylindrical/launch/: semantic_egocan.launch.py  semantic_egocan_plus_egocircle.launch.py  test_egocan.launch.py
dependencies/egocylindrical/notes/: optimization_notes.txt
dependencies/egocylindrical/src/: approximation_validation.cpp  can_image_core.cpp  can_image_inflator_generator.cpp  can_image_inflator_node.cpp  dedicated_egocylindrical_propagator.cpp  dedicated_egocylindrical_propagator_node.cpp  dedicated_egocylindrical_propagator_nodelet.cpp  depth_image_difference.cpp  depth_image_difference_debugging_publisher.cpp  depth_image_filter.cpp  depth_image_inserter.cpp  depth_image_remapper.cpp  ecwrapper_buffer.cpp  egocylindrical_propagator.cpp  egocylindrical_propagator_node.cpp  egocylindrical_propagator_nodelet.cpp  floor_image_core.cpp  floor_image_generator.cpp  floor_image_node.cpp  floor_image_nodelet.cpp  laser_scan_inserter.cpp  normal_point_cloud_core.cpp  normal_point_cloud_floor_only_core.cpp  normal_point_cloud_floor_only_generator.cpp  normal_point_cloud_floor_only_node.cpp  normal_point_cloud_generator.cpp  normal_point_cloud_node.cpp  point_cloud_core.cpp  point_cloud_generator.cpp  point_cloud_node.cpp  point_cloud_nodelet.cpp  point_propagator.cpp  point_transformer.cpp  projected_point_cloud_core.cpp  projected_point_cloud_generator.cpp  projected_point_cloud_node.cpp  projected_point_cloud_nodelet.cpp  range_image_converter.cpp  range_image_converter_node.cpp  range_image_converter_nodelet.cpp  (+16 more)
dependencies/egocylindrical/test/: unit_tests.cpp
dependencies/egocylindrical_msgs/: CMakeLists.txt  package.xml
dependencies/egocylindrical_msgs/msg/: EgoCylinderPoints.msg
dependencies/ocs2/ocs2_msgs/: CMakeLists.txt  package.xml
dependencies/superpixels/: CMakeLists.txt  README.md  package.xml  rosbag_play_command.txt  rosbag_record_command.txt
dependencies/superpixels/cfg/: Parameters.cfg  depth_hardware.yaml  depth_offline.yaml  depth_online.yaml  depth_rosbag.yaml
dependencies/superpixels/launch/: hardware_perception_stack.launch.py  rosbag_perception_stack.launch.py  sim_perception_stack.launch.py  superpixel_depth_segmentation_rosbag.launch.py  superpixel_depth_segmentation_sim.launch.py
dependencies/superpixels/rviz/: superpixels_depth.rviz
dependencies/superpixels/src/: ConvexHullifier.cpp  ImagePreprocessor.cpp  Ransac.cpp  SuperpixelDepthSegmentationNode.cpp  SuperpixelDepthSegmenter.cpp  Visualizer.cpp
go2/go2_gazebo/: CMakeLists.txt  package.xml
go2/go2_gazebo/launch/: gazebo.launch.py  gazebo_mmp.launch.py
go2/go2_gazebo/src/: FootContactSensor.cpp
go2/go2_gazebo/worlds/: blocks.world  can.world  empty.world  maze.world  mazeclutter.world  outdoor.world  ramp.world  stairs1.world
go2/go2_interface/: CMakeLists.txt  package.xml
go2/go2_interface/config/: ddp.info  frame_declaration.info  sqp.info  targetCommand.info  task.info  wbc.info
go2/go2_interface/launch/: bringup_cameras.launch.py  bringup_gazebo.launch.py  bringup_gazebo_mmp.launch.py  bringup_hardware.launch.py  bringup_jetson.launch.py  bringup_rosbag.launch.py  get_low_state.launch.py  run_gazebo.launch.py  run_gazebo_mmp.launch.py
go2/go2_interface/rviz/: egocan.rviz  go2_mmp.rviz  realsense_test.rviz  view_go2.rviz
go2/go2_interface/src/: Go2GazeboBridge.cpp  Go2System.cpp  mainGo2Gazebo.cpp  mainGo2Hardware.cpp  mainGo2Rosbag.cpp
go2/go2_interface_msgs/: CMakeLists.txt  package.xml
go2/go2_interface_msgs/srv/: CheaterMode.srv
go2/go2_system/: CMakeLists.txt  package.xml
go2/go2_wbc/: CMakeLists.txt  package.xml
(+456 files in other folders)
