<?xml version="1.0"?>
<package format="3">
  <name>legged_utils</name>
  <version>0.0.0</version>
  <description>Utility classes and functions for legged systems</description>

  <maintainer email="mass@gatech.edu">Max Asselmeier</maintainer>
  <license>BSD</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>                               
   <build_type>ament_cmake</build_type>
  </export>
</package>