<?xml version="1.0"?>
<package format="2">
  <name>depth_img_normal_estimation</name>
  <version>0.0.0</version>
  <description>The depth_img_normal_estimation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="masselmeier3@todo.todo">masselmeier3</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/mmp</url> -->

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author email="mass@gatech.edu">Max Asselmeier</author>


  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>roslib</depend>
  <depend>rclcpp</depend>
  <depend>cv_bridge</depend> 
  <depend>image_transport</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
