<?xml version="1.0"?>
<package format="3">
  <name>go2_gazebo</name>
  <version>0.1.0</version>
  <description>CHAMP Gazebo Package</description>

  <maintainer email="asselmeier.max@gmail.com">Max Asselmeier</maintainer>
  <author>Max Asselmeier</author>
  
  <license>BSD</license>

    
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch_ros</build_depend>
  
  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>urdf</depend>
  <depend>sensor_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
