<package format="3">
  <name>go2_interface_msgs</name>
  <version>0.0.1</version>
  <description>Provides go2_interface_msgs</description>

  <maintainer email="asselmeier.max@gmail.com">Max Asselmeier</maintainer>
  <author>Max Asselmeier</author>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <!-- <exec_depend>message_runtime</exec_depend> -->

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>                               
   <build_type>ament_cmake</build_type>
  </export>
</package>
